[gd_scene load_steps=13 format=3 uid="uid://dix7l5bqh0jmq"]

[ext_resource type="Script" path="res://Scripts/Menues/Character_Selection/character_select_menu.gd" id="1_eyfin"]
[ext_resource type="Texture2D" uid="uid://dnonfh7kaxspj" path="res://Graphics/BG/Char_Select_BG_1x.png" id="1_gp0cp"]
[ext_resource type="PackedScene" uid="uid://cdrfw3w0vknif" path="res://Scenes/UI/bg_image.tscn" id="2_jhxp6"]
[ext_resource type="Texture2D" uid="uid://d58ahpf6h811" path="res://Graphics/Characters/DANI_DANCER/Single_1x.png" id="4_8ef2g"]
[ext_resource type="Texture2D" uid="uid://b6dxewwkiapn1" path="res://Graphics/Characters/ASTA_ASTROLOGIAN/Single_1x.png" id="5_eo6ch"]
[ext_resource type="Texture2D" uid="uid://ogpf7vucv8qj" path="res://Graphics/Characters/Locked_Character_1x.png" id="6_5rdbn"]
[ext_resource type="PackedScene" uid="uid://chw0euwlvm8g8" path="res://Scenes/CharacterSelectScreen/character_selected_card.tscn" id="7_n2fes"]
[ext_resource type="PackedScene" uid="uid://biq85g3kcoxjb" path="res://Scenes/Player/PCs/Dani_Dancer/dani_dancer.tscn" id="8_a1jqr"]

[sub_resource type="Animation" id="Animation_6p7tb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MC_Screen_Edge:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("test_btn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MC_Screen_Edge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("test_btn:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TR_BG_Image:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l3j27"]
resource_name = "SCREEN_CLOSED"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MC_Screen_Edge:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("test_btn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tctq3"]
resource_name = "SCREEN_OPENED"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MC_Screen_Edge:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.54902), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("test_btn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.54902), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MC_Screen_Edge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("test_btn:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TR_BG_Image:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlifk"]
_data = {
"RESET": SubResource("Animation_6p7tb"),
"SCREEN_CLOSED": SubResource("Animation_l3j27"),
"SCREEN_OPENED": SubResource("Animation_tctq3")
}

[node name="CharacterSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eyfin")

[node name="TR_Static_BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gp0cp")

[node name="TR_BG_Image" parent="." instance=ExtResource("2_jhxp6")]
visible = false
layout_mode = 1
bg_texture = ExtResource("1_gp0cp")

[node name="MC_Screen_Edge" type="MarginContainer" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CS_CARD" parent="MC_Screen_Edge" instance=ExtResource("7_n2fes")]
unique_name_in_owner = true
visible = false
layout_mode = 2
CharacterScene = ExtResource("8_a1jqr")

[node name="MC_Char_Selections" type="MarginContainer" parent="MC_Screen_Edge"]
layout_mode = 2
theme_override_constants/margin_top = 590
theme_override_constants/margin_bottom = 20

[node name="HB_Char_Selections" type="HBoxContainer" parent="MC_Screen_Edge/MC_Char_Selections"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64

[node name="AR_Char1" type="AspectRatioContainer" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="BG_Char1" type="ColorRect" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char1"]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
color = Color(0.57, 0.1083, 0.15447, 1)

[node name="TB_Dani" type="TextureButton" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char1"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_8ef2g")

[node name="AR_Char2" type="AspectRatioContainer" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections"]
layout_mode = 2
size_flags_vertical = 8

[node name="BG_Char2" type="ColorRect" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char2"]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
color = Color(0, 0.49, 0, 1)

[node name="TB_Asta" type="TextureButton" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_eo6ch")

[node name="AR_Char3" type="AspectRatioContainer" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections"]
layout_mode = 2
size_flags_vertical = 0

[node name="BG_Char3" type="ColorRect" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char3"]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TB_TBD1" type="TextureButton" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_5rdbn")

[node name="AR_Char4" type="AspectRatioContainer" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections"]
layout_mode = 2
size_flags_vertical = 8

[node name="BG_Char4" type="ColorRect" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char4"]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TB_TBD2" type="TextureButton" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char4"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_5rdbn")

[node name="AR_Char5" type="AspectRatioContainer" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections"]
layout_mode = 2
size_flags_vertical = 0

[node name="BG_Char5" type="ColorRect" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char5"]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TB_TBD3" type="TextureButton" parent="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char5"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_5rdbn")

[node name="test_btn" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(64, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 32.0
offset_right = -16.0
offset_bottom = 64.0
grow_horizontal = 0
text = "Test"

[node name="AP_CharSelect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dlifk")
}

[connection signal="pressed" from="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char1/TB_Dani" to="." method="_on_dani_pressed"]
[connection signal="pressed" from="MC_Screen_Edge/MC_Char_Selections/HB_Char_Selections/AR_Char2/TB_Asta" to="." method="_on_asta_pressed"]
[connection signal="pressed" from="test_btn" to="." method="_on_test_btn_pressed"]
